src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Advised_Wholesaler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advised Wholesaler?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_They_Selling_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are They Selling On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts_To_Retrieve_So_Far__c</fullName>
        <label>Attempts To Retrieve So Far</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BACS_Report_Date__c</fullName>
        <label>BACS Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number_Text__c</fullName>
        <description>Bank Account Number Text field for Core API to populate during Case Creation in the event Payment Failure does not have a valid payment method.</description>
        <label>Bank Transfer Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Reference_Number__c</fullName>
        <description>Bank Reference Number</description>
        <inlineHelpText>Bank Reference Number</inlineHelpText>
        <label>Bank Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Transfer_Account_Number__c</fullName>
        <formula>IF(ISBLANK(Bank_Account_Number_Text__c),Payment__r.Payment_Method__r.Zuora__BankTransferAccountNumber__c,Bank_Account_Number_Text__c)</formula>
        <label>Bank Transfer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Closed_Reason__c</fullName>
        <label>Case Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Re-subscribed</fullName>
                </value>
                <value>
                    <fullName>Not Re-subscribed</fullName>
                </value>
                <value>
                    <fullName>DD Mandate Amendment Processed</fullName>
                </value>
                <value>
                    <fullName>DD Mandate Cancellation Processed</fullName>
                </value>
                <value>
                    <fullName>Direct Debit Indemnity Claim Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Tag__c</fullName>
        <label>Case Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charter_Ref_No__c</fullName>
        <label>Charter Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Cancellation_Call_Date_Time__c</fullName>
        <label>DD Cancellation Call Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DD_Cancellation_Outcome__c</fullName>
        <label>DD Cancellation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>Cheque Sales</fullName>
                </value>
                <value>
                    <fullName>NATC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Cancellation_Priority__c</fullName>
        <formula>CASE(OC_Outcome__c, 
    &quot;Reschedule&quot;, 0,
    &quot;Busy&quot;, 1,
    &quot;Not Started&quot;, 2,
    &quot;Answerphone&quot;, 3,
    &quot;No Answer&quot;, 4,
    -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DD Cancellation Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Cancellation_Scheduled_Callback__c</fullName>
        <label>DD Cancellation Scheduled Callback</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DD_Winback_Call_Date_Time__c</fullName>
        <label>DD Winback Call Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DD_Winback_Outcome__c</fullName>
        <label>DD Winback Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>Cheque Sales</fullName>
                </value>
                <value>
                    <fullName>NATC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Winback_Priority__c</fullName>
        <formula>CASE(OC_Outcome__c, 
    &quot;Reschedule&quot;, 0,
    &quot;Busy&quot;, 1,
    &quot;Not Started&quot;, 2,
    &quot;Answerphone&quot;, 3,
    &quot;No Answer&quot;, 4,
    -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DD Winback Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Winback_Scheduled_Callback__c</fullName>
        <label>DD Winback Scheduled Callback</label>
        <type>DateTime</type>
    </fields>

    <fields>
        <fullName>Date_Of_Issue_Supplement__c</fullName>
        <label>Date Of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Collected_Amount__c</fullName>
        <description>Amount of Debt Collected?</description>
        <label>Debt Collected Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_Collected__c</fullName>
        <description>Is the outstanding debt collected from Customer?</description>
        <label>Debt Collected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Of_Vouchers__c</fullName>
        <label>Date Of Vouchers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened_By_Hour__c</fullName>
        <description>To show the hour in which the case was received.</description>
        <formula>VALUE( MID( TEXT(CreatedDate), 12, 2 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Opened By Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Issue__c</fullName>
        <label>Date of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_Of_Vouchers_Lost__c</fullName>
        <label>Details Of Vouchers Lost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Details_2__c</fullName>
        <label>Case Detail 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Digital_Details__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Subs</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Acq Offer</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Acquisition Offer</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Against</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Already Receives Internal Offers</fullName>
                </value>
                <value>
                    <fullName>Answers &amp; Winners</fullName>
                </value>
                <value>
                    <fullName>App Install</fullName>
                </value>
                <value>
                    <fullName>App performance</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Availablity</fullName>
                </value>
                <value>
                    <fullName>Broken links</fullName>
                </value>
                <value>
                    <fullName>Browser</fullName>
                </value>
                <value>
                    <fullName>Browser issues</fullName>
                </value>
                <value>
                    <fullName>Buy Edition</fullName>
                </value>
                <value>
                    <fullName>Cannot get through</fullName>
                </value>
                <value>
                    <fullName>Cartoons</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Columnists</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Competitor Offer</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Contact Details</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Details_3__c</fullName>
        <label>Case Detail 4</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Digital_Details_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access Issues</fullName>
                </value>
                <value>
                    <fullName>Account Locked</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Adverts</fullName>
                </value>
                <value>
                    <fullName>Against</fullName>
                </value>
                <value>
                    <fullName>App Performance</fullName>
                </value>
                <value>
                    <fullName>Appearance</fullName>
                </value>
                <value>
                    <fullName>Article Updates</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Availablity</fullName>
                </value>
                <value>
                    <fullName>Black Hands</fullName>
                </value>
                <value>
                    <fullName>Black Pages</fullName>
                </value>
                <value>
                    <fullName>Blank Pages</fullName>
                </value>
                <value>
                    <fullName>Blurred</fullName>
                </value>
                <value>
                    <fullName>Broken Links</fullName>
                </value>
                <value>
                    <fullName>Cannot Afford</fullName>
                </value>
                <value>
                    <fullName>Cartoons</fullName>
                </value>
                <value>
                    <fullName>Colour</fullName>
                </value>
                <value>
                    <fullName>Commenting</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content Quality</fullName>
                </value>
                <value>
                    <fullName>Content Quantity</fullName>
                </value>
                <value>
                    <fullName>Content Updates</fullName>
                </value>
                <value>
                    <fullName>Creased</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>Editorial Mistakes</fullName>
                </value>
                <value>
                    <fullName>Failed Download</fullName>
                </value>
                <value>
                    <fullName>Faint Print</fullName>
                </value>
                <value>
                    <fullName>Folding Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Details__c</fullName>
        <label>Case Detail 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Of_Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Account Closed</fullName>
                </value>
                <value>
                    <fullName>Account transferred to new Bank</fullName>
                </value>
                <value>
                    <fullName>Account/instruction transferred to Different Branch</fullName>
                </value>
                <value>
                    <fullName>Advance Notice - Disputed</fullName>
                </value>
                <value>
                    <fullName>Advance Notice Disputed</fullName>
                </value>
                <value>
                    <fullName>Against</fullName>
                </value>
                <value>
                    <fullName>Already Set Up</fullName>
                </value>
                <value>
                    <fullName>Amazon Subs Info</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Amount Differs</fullName>
                </value>
                <value>
                    <fullName>Amount Not Yet Due</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>App Features</fullName>
                </value>
                <value>
                    <fullName>App performance</fullName>
                </value>
                <value>
                    <fullName>Apple News</fullName>
                </value>
                <value>
                    <fullName>Apple Subs Info</fullName>
                </value>
                <value>
                    <fullName>Article Copy</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Availablity</fullName>
                </value>
                <value>
                    <fullName>Bank will not accept DD on Account</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Blackberry &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Blackberry &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Booking Amendment</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Branded good</fullName>
                </value>
                <value>
                    <fullName>Broken Link</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Product_Type__c</fullName>
        <description>Used by Chatham Digital Services Team for reporting and case tracking purposes</description>
        <formula>TEXT(Account.Digital_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalBCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional BCC field.</description>
        <label>Additional BCC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional CC field.</description>
        <label>Additional CC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalTo__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional To field. The SuppliedEmail (Web Email) value is added automatically on case creation if a valid Contact isn&apos;t associated.</description>
        <label>Additional To</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Case_Thread_Id__c</fullName>
        <description>A formula to generate the Salesforce Case Thread Id for display on detail pages or inclusion in email templates.</description>
        <formula>&quot;[ ref:_&quot; &amp; 
LEFT( $Organization.Id , 5) &amp; 
IF (MID ( $Organization.Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,10), 
IF (MID ( $Organization.Id, 7, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 9), 
IF (MID ( $Organization.Id, 8, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 8), 
IF (MID ( $Organization.Id, 9, 1)&lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 7), 
IF (MID ( $Organization.Id,10, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 6), 
IF (MID ($Organization.Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 5), 
IF(MID ( $Organization.Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,4), 
IF (MID ( $Organization.Id, 13, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 3), 
IF (MID ( $Organization.Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 2), &quot;&quot;) ) ) ) ) ) ) ) )
&amp; &quot;._&quot; &amp;LEFT( Id, 5) &amp; 
IF(MID ( Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 10), 
IF (MID ( Id, 7, 1)&lt;&gt; &quot;0&quot;, RIGHT(Id, 9), 
IF (MID ( Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id,8), 
IF (MID ( Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 7), 
IF (MID ( Id, 10,1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 6), 
IF (MID ( Id, 11, 1) &lt;&gt; &quot;0&quot;,RIGHT(Id, 5), 
IF (MID ( Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 4), 
IF (MID( Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 3), 
IF (MID ( Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT(Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) &amp; &quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Disable_Email_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to true disables the Email Distribution feature on a case by case basis if Email Distribution is enabled.</description>
        <label>Disable Email Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2CP__ExtraEmails__c</fullName>
        <description>Stores all email addresses on inbound emails. This data is used by Auto Create Contacts, Auto Add Case Team Members and Auto Add Contact Roles.</description>
        <label>ExtraEmails</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText_Inc_Private__c</fullName>
        <label>History Text Inc Private</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText__c</fullName>
        <description>Contains a chronology of the most recent 25 public case comments (up to 32,000 chars) for inclusion in email templates. This field is updated when inbound emails are received and outbound emails are sent through the New Comment page.</description>
        <label>HistoryText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Knowledge_Base_URL__c</fullName>
        <label>Knowledge Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Private_Comment__c</fullName>
        <description>Contains the most recent private comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
        <label>Most Recent Private Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Public_Comment__c</fullName>
        <description>Contains the most recent public comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
        <label>Most Recent Public Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__SubStatus__c</fullName>
        <description>This field is deprecated. Do not use it.</description>
        <label>SubStatus (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Unfinished</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Of_Vouchers__c</fullName>
        <label>End_Date_Of_Vouchers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseFlag__c</fullName>
        <description>This should be used  to display the Case Flag if your organization is not using business hours.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null, 
IF(FLAGS__Case_Flag_Age__c &gt; (IF(ISBLANK(FLAGS__CaseTimeOffset4__c) , $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset4__c,FLAGS__CaseTimeOffset4__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset3__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset3__c,FLAGS__CaseTimeOffset3__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset2__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset2__c,FLAGS__CaseTimeOffset2__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset1__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset1__c,FLAGS__CaseTimeOffset1__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16)) 
))) 
)</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseFlagsBusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Case Flags Business Hours record used to calculate the Case Flag Business Age. This is set automatically and should not be manipulated.</description>
        <label>Case Flags Business Hours</label>
        <referenceTo>FLAGS__CaseFlagsBusinessHours__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseFlagsEscalationTime1__c</fullName>
        <description>A timestamp to indicate when the total business hours on the case will exceed Age 1 Hours. This can be used as the basis for workflow email alerts or other automation.</description>
        <label>Case Flags Escalation Time 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseFlagsEscalationTime2__c</fullName>
        <description>A timestamp to indicate when the total business hours on the case will exceed Age 2 Hours. This can be used as the basis for workflow email alerts or other automation.</description>
        <label>Case Flags Escalation Time 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseFlagsEscalationTime3__c</fullName>
        <description>A timestamp to indicate when the total business hours on the case will exceed Age 3 Hours. This can be used as the basis for workflow email alerts or other automation.</description>
        <label>Case Flags Escalation Time 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset1__c</fullName>
        <description>The number of hours after the Case Flag Date/Time when Flag 1 will be displayed.</description>
        <label>Case Flags Age 1 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset2__c</fullName>
        <description>The number of hours after the Case Flag Date/Time when Flag 2 will be displayed.</description>
        <label>Case Flags Age 2 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset3__c</fullName>
        <description>The number of hours after the Case Flag Date/Time when Flag 3 will be displayed.</description>
        <label>Case Flags Age 3 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Account__c</fullName>
        <description>Deprecated. Use Flag or Flag (BH) instead.</description>
        <formula>IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset4__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset3__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset2__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset1__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16)) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDep Case Flag (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Age_Text__c</fullName>
        <description>The Case Flag Age decimal rendered as a eight-digit string used to aid with sorting on list views.</description>
        <formula>LPAD(TEXT(ROUND(FLAGS__Case_Flag_Age__c*100,0)),8,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Age Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Age__c</fullName>
        <description>The total amount of time (in hours) since the Case Flag was set.</description>
        <formula>(NOW() - FLAGS__ViewedFlag__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>